name:               gedcom
version:            0.1
homepage:           http://haskell.org
synopsis:           Tools for GEDCOM processing
description:
    A set of tools to parse and manipulate GEDCOM files.
category:           System
license:            BSD3
license-file:       LICENSE
author:             Ray Lehtiniemi
maintainer:         rayl@mail.com
extra-source-files: README
cabal-version:      >= 1.6
bug-reports:        rayl@mail.com
build-type:         Simple

tested-with:        GHC==7.4.2

data-files:         

source-repository head
  type:     git
  location: https://github.com/rayl/gedcom

executable gedcom
    main-is:        Main.hs
    ghc-options:    -Wall
